--- a/package.json
+++ b/package.json
@@ -21,13 +21,15 @@
   ],
   "devDependencies": {
     "grunt": "~0.4.1",
-    "grunt-contrib-qunit": "*",
-    "grunt-contrib-jshint": "*",
-    "grunt-contrib-concat": "*",
-    "grunt-contrib-uglify": "*",
-    "grunt-contrib-watch": "*",
     "grunt-contrib-clean": "*",
+    "grunt-contrib-concat": "*",
+    "grunt-contrib-connect": "*",
+    "grunt-contrib-copy": "^0.8.0",
+    "grunt-contrib-cssmin": "^0.12.2",
+    "grunt-contrib-jshint": "*",
+    "grunt-contrib-qunit": "*",
     "grunt-contrib-requirejs": "*",
-    "grunt-contrib-connect": "*"
+    "grunt-contrib-uglify": "*",
+    "grunt-contrib-watch": "*"
   }
 }
