--- a/package.json
+++ b/package.json
@@ -9,9 +9,9 @@
     "test": "grunt qunit"
   },
   "author": {
-    "name": "Author Name",
-    "email": "email@domain.com",
-    "url": "http://bower.io/"
+    "name": "ffrr",
+    "email": "f@faux.sk",
+    "url": "znasichdani.sk"
   },
   "licenses": [
     {
