--- a/.jshintrc
+++ b/.jshintrc
@@ -7,9 +7,11 @@
   "noarg": true,
   "sub": true,
   "undef": true,
-  "unused": true,
+  "unused": false,
   "boss": true,
   "eqnull": true,
-  "node": true,
-  "es5": true
+  "predef": [
+    "define"
+  ],
+  "browser": true
 }
